install Vite, setup tailwind

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # compiled output
 /server/dist
 /server/node_modules
+/client/node_modules
+/client/dist
+/client/dist-ssr
+/client/*.local
 
 # Logs
 logs
