--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.7.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
